# semantic-search-case

./: .gitignore  README.md  final_notebook.ipynb  pyproject.toml  requirements.txt
notebooks/: #15_rus_eng.ipynb  anycha_notebook.ipynb  arina_notebook.ipynb  error_analysis.ipynb  language_comparison.ipynb  multilingual-e5-small.ipynb  multilingual-e5-small_analyzies.ipynb  paraphrase-multilingual-MiniLM-L12-v2.ipynb  paraphrase-multilingual-mpnet-base-v2.ipynb  summary_erorr_types.ipynb  vitaly_notebook.ipynb  vizualization.ipynb
outputs/: error_analysis_table.csv  error_analysis_table.html  errors_e5.json  errors_minilm.json  errors_mpnet.json  intfloat_multilingual-e5-small.npy  language_comparison.csv  language_comparison.html  model_comparison.csv  model_comparison.html  paraphrase-multilingual-MiniLM-L12-v2.npy  paraphrase-multilingual-mpnet-base-v2.npy  summary_error_types.csv  summary_error_types.html
src/: config.py  data.py  embedder.py  metrics.py  search.py
